--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<!-- NG-ZORRO -->
-<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
-  <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
+<nz-header class="main-header" nz-row nzType="flex" style="background-color: #bb2929;">
+  <div>
+    <h2 style="color: white; padding-left: 10px;">Service Booking System</h2>
+  </div>
+  <div class="nav-links">
+    <a nz-button nzType="link" routerLink="/home" routerLinkActive="active" href="">Home</a>
+    <a nz-button nzType="link" routerLink="/register" routerLinkActive="active" href="">Register</a>
+    <a nz-button nzType="link" routerLink="/login" routerLinkActive="active" href="">Login</a>
+  </div>
+</nz-header>
+<router-outlet></router-outlet>
